# scitex-linter

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: cla.yml  docs.yml  install-test.yml  lint.yml  publish-pypi.yml  python-tests.yml  test.yml
GITIGNORED/: AS_PLUGIN.md  LINT_PATTERNS.md
docs/sphinx/: cli.rst  conf.py  hook.rst  index.rst  installation.rst  quickstart.rst  rules.rst
docs/sphinx/api/: scitex_linter.rst
examples/: 00_run_all.sh  01_check_files.sh  01_lint_files.sh  02_lint_and_run.sh  03_list_rules.sh  04_mcp_tools.sh  05_claude_code_hook.sh  06_format.sh  07_notebook_usage.ipynb  sample_bad.py  sample_clean.py
src/scitex_linter/: __init__.py  __main__.py  _cmd_api.py  _cmd_completion.py  _cmd_format.py  _cmd_rules.py  _collect.py  _fm_checker.py  _ipynb.py  _naming_checker.py  _packages.py  _path_checker.py  _plugin_loader.py  _rule_tables.py  _server.py  checker.py  cli.py  config.py  fixer.py  flake8_plugin.py  formatter.py  rules.py  runner.py
src/scitex_linter/_mcp/: __init__.py
src/scitex_linter/_mcp/tools/: __init__.py  lint.py
src/scitex_linter/_rules/: __init__.py  _base.py  _error_handling.py  _figure.py  _imports.py  _io.py  _path.py  _plot.py  _stats.py  _structure.py
src/scitex_linter/_skills/scitex-linter/: 01_installation.md  01_quick-start.md  02_quick-start.md  02_rule-catalog.md  03_python-api.md  04_cli-reference.md  07_rule-catalog.md  10_cli-reference.md  11_mcp-tools.md  12_env-vars.md  SKILL.md  cli-reference.md  mcp-tools.md  quick-start.md  rule-catalog.md
src/scitex_linter/_sphinx_html/: .buildinfo  cli.html  genindex.html  hook.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  rules.html  search.html  searchindex.js
src/scitex_linter/_sphinx_html/.doctrees/: cli.doctree  environment.pickle  hook.doctree  index.doctree  installation.doctree  quickstart.doctree  rules.doctree
src/scitex_linter/_sphinx_html/.doctrees/api/: scitex_linter.doctree
src/scitex_linter/_sphinx_html/_modules/: index.html  scitex_linter.html
src/scitex_linter/_sphinx_html/_modules/scitex_linter/: _fm_checker.html  _packages.html  checker.html  cli.html  config.html  flake8_plugin.html  formatter.html  runner.html
src/scitex_linter/_sphinx_html/_modules/scitex_linter/_rules/: _base.html
src/scitex_linter/_sphinx_html/api/: scitex_linter.html
src/scitex_linter/skills/: SKILL.md
src/scitex_linter/skills/references/: rule-catalog.md
tests/: test_checker.py  test_cli_subcommands.py  test_fixer.py  test_flake8_and_runner.py  test_fm_rules.py  test_ipynb_linting.py  test_path_rules.py  test_phase2.py  test_skills_quality.py
tests/develop/: test_audit.py
tests/examples/: test_01_check_files.py  test_02_lint_and_run.py  test_03_list_rules.py  test_04_mcp_tools.py  test_05_claude_code_hook.py  test_06_format.py  test_07_notebook_usage.py  test_sample_bad.py  test_sample_clean.py
tests/integration/: test_cli_subcommands.py  test_cross_package_imports.py  test_flake8_and_runner.py  test_ipynb_linting.py
tests/scitex_linter/: test_checker.py  test_config.py  test_eh001.py  test_fixer.py
