[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scitex-linter"
version = "0.1.0"
description = "AST-based linter enforcing SciTeX reproducible research patterns"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.8"
authors = [{name = "ywatanabe"}]

[project.urls]
Documentation = "https://scitex-linter.readthedocs.io"
Repository = "https://github.com/ywatanabe1989/scitex-linter"

[project.optional-dependencies]
mcp = ["fastmcp"]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
all = [
    "scitex-linter[mcp]",
    "scitex-linter[docs]",
    "scitex-linter[dev]",
]

[project.scripts]
scitex-linter = "scitex_linter.cli:main"

[project.entry-points."flake8.extension"]
STX = "scitex_linter.flake8_plugin:SciTeXFlake8Checker"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--disable-warnings"]

[tool.coverage.run]
source = ["scitex_linter"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]
