[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scitex-linter"
version = "0.3.5"
description = "AST-based linter enforcing SciTeX reproducible research patterns"
readme = "README.md"
license = "AGPL-3.0-only"
classifiers = []
requires-python = ">=3.8"
dependencies = ["scitex-dev"]
authors = [{name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai"}]

[project.urls]
Documentation = "https://scitex-linter.readthedocs.io"
Repository = "https://github.com/ywatanabe1989/scitex-linter"

[project.optional-dependencies]
mcp = ["fastmcp>=2.0.0"]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
all = [
    "scitex-linter[mcp]",
    "scitex-linter[docs]",
    "scitex-linter[dev]",
]

[project.scripts]
scitex-linter = "scitex_linter.cli:main"

[project.entry-points."scitex_dev.docs"]
scitex-linter = "scitex_linter"

[project.entry-points."scitex_dev.skills"]
scitex-linter = "scitex_linter"

[project.entry-points."flake8.extension"]
STX = "scitex_linter.flake8_plugin:SciTeXFlake8Checker"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scitex_linter = ["skills/*.md", "skills/references/*.md", "_skills/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--disable-warnings"]

[tool.coverage.run]
source = ["scitex_linter"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]
